--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 			<div class="footer__copyright">
 				<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
 				<!-- <a href="https://jekyllthemes.io" target="_blank">Jekyll Themes</a> -->
-				<a target="_blank">Hi</a>
+				<a target="_blank"></a>
 			</div>
 
 			{% include socials.html %}
