--- a/css/style.scss
+++ b/css/style.scss
@@ -153,5 +153,5 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
 
 // own page styles
 @import "_includes/kgallery";
-
+@import "_includes/kgallery-video";
 
